Task 3.10 - Finallize app functionality: basic task: Implemented new functionality and deployed the application